// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmailIntegrationList/> render() should render the page when there are no integrations 1`] = `
<div>
  <div
    class="w-100"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            aria-current="page"
            class="active breadcrumb-item"
          >
            Email
          </li>
        </ol>
      </nav>
      <div>
        <button
          aria-disabled="false"
          class="wrapper fill primary medium"
          type="submit"
        >
          <span>
            Add email address
          </span>
        </button>
      </div>
    </div>
    <div
      class="pageContainer pb0 container-fluid"
      data-candu-id="integration-list-top"
    >
      <div
        class="mb-3"
      >
        <span>
          Connect your support email addresses and respond to your customers from Gorgias.
        </span>
      </div>
      <div
        class="mt-3"
      >
        You have no integration of this type at the moment.
      </div>
    </div>
    <div
      class="container-fluid"
      data-candu-id="integration-list-bottom"
    />
  </div>
</div>
`;

exports[`<EmailIntegrationList/> render() should render the page without warning when the email is verified 1`] = `
<div>
  <div
    class="w-100"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            aria-current="page"
            class="active breadcrumb-item"
          >
            Email
          </li>
        </ol>
      </nav>
      <div>
        <button
          aria-disabled="false"
          class="wrapper fill primary medium"
          type="submit"
        >
          <span>
            Add email address
          </span>
        </button>
      </div>
    </div>
    <div
      class="pageContainer pb0 container-fluid"
      data-candu-id="integration-list-top"
    >
      <div
        class="mb-3"
      >
        <span>
          Connect your support email addresses and respond to your customers from Gorgias.
        </span>
      </div>
      <div
        class="alert warning"
      >
        <div
          class="iconContainer"
        >
          <img
            alt="icon"
            src="test-file-stub"
          />
        </div>
        <div
          class="content"
        >
          <span
            class="label"
          >
            In order to verify your domains, click on the emails with 'Pending domain verification status', go to the Outbound Verification tab and complete the verification process.
            <br />
            If you need more information
             
            <a
              href="https://docs.gorgias.com/en-US/sendgrid-email-domain-verification-459392"
              rel="noreferrer"
              target="_blank"
            >
              click here
            </a>
             
          </span>
        </div>
      </div>
    </div>
    <table
      class="table-integrations mt-3 table table-hover"
    >
      <tbody>
        <tr
          class="row"
        >
          <td
            class="smallest align-middle"
          >
            <i
              class="icon material-icons align-bottom"
            >
              email
            </i>
          </td>
          <td
            class="align-middle"
          >
            <div
              class="address"
            >
              <div>
                <b
                  class="mr-2"
                >
                  My Email Integration 1
                </b>
                <span
                  class="addressValue"
                >
                  email@gorgias-test.com
                </span>
              </div>
            </div>
          </td>
          <td
            class="smallest align-middle text-right p-0"
          >
            <div>
              EmailIntegrationListVerificationStatus
            </div>
          </td>
          <td
            class="smallest align-middle"
          >
            <i
              class="material-icons md-2 align-middle icon-go-forward"
            >
              keyboard_arrow_right
            </i>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="container-fluid"
      data-candu-id="integration-list-bottom"
    />
  </div>
</div>
`;
